--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,9 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Tag Docker image
+      run: docker tag my-docker-app:latest ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
+
     - name: Push Docker image
-      run: docker push my-docker-app:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
 
