--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ on:
       - develop
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,4 +31,24 @@ jobs:
 
     - name: Push Docker image
       run: docker push ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
+
+  deploy-and-test:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Deploy application
+      run: |
+        docker pull ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
+        docker run -d -p 4500:4500 --name my-docker-app ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
+
+    - name: Wait for application to start
+      run: sleep 30  # Adjust as necessary
+
+    - name: Test application
+      run: |
+        curl -f http://localhost:4500 || exit 1
+        curl -f http://localhost:4500/health || exit 1
 
