--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,9 +43,12 @@ jobs:
       run: |
         docker pull ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
         docker run -d -p 4500:4500 --name my-docker-app ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
+    
+    - name: Show logs
+      run: docker logs my-docker-app
 
     - name: Wait for application to start
-      run: sleep 60  # Adjust as necessary
+      run: sleep 90  # Adjust as necessary
 
     - name: Test application
       run: |
