--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci-cd.yml
 name: CI/CD Pipeline
 
 on:
@@ -7,20 +6,25 @@ on:
       - develop
   workflow_dispatch:
 
-
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: Install dependencies
+      run: npm install
 
     - name: Build Docker image
-      run: docker build . -t my-docker-app:latest
+      run: |
+        docker build -t my-docker-app .
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -28,32 +32,25 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Tag Docker image
-      run: docker tag my-docker-app:latest ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
+    - name: Push Docker image to Docker Hub
+      run: |
+        docker tag my-docker-app pechijarevluka/my-docker-app:latest
+        docker push pechijarevluka/my-docker-app:latest
 
-    - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
-
-  deploy-and-test:
-    needs: build-and-test
+  deploy:
     runs-on: ubuntu-latest
+    needs: build
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Deploy application
+    - name: Pull Docker image from Docker Hub
       run: |
-        docker pull ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
-        docker run -d -p 4500:4500 --name my-docker-app ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
-    
-    - name: Show logs
-      run: docker logs my-docker-app
+        docker pull pechijarevluka/my-docker-app:latest
 
-    - name: Wait for application to start
-      run: sleep 590  # Adjust as necessary
-
-    - name: Test application
+    - name: Deploy Docker container
       run: |
-        curl -f http://localhost:4500 || exit 1
-        curl -f http://localhost:4500/health || exit 1
-
+        docker stop my-docker-app || true
+        docker rm my-docker-app || true
+        docker run -d --name my-docker-app -p 4500:4500 pechijarevluka/my-docker-app:latest
