--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,3 +1,4 @@
+# .github/workflows/ci-cd.yml
 name: CI/CD Pipeline
 
 on:
@@ -23,8 +24,7 @@ jobs:
       run: npm install
 
     - name: Build Docker image
-      run: |
-        docker build -t my-docker-app .
+      run: docker build -t my-docker-app .
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -34,8 +34,8 @@ jobs:
 
     - name: Push Docker image to Docker Hub
       run: |
-        docker tag my-docker-app pechijarevluka/my-docker-app:latest
-        docker push pechijarevluka/my-docker-app:latest
+        docker tag my-docker-app ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,11 +46,17 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Pull Docker image from Docker Hub
-      run: |
-        docker pull pechijarevluka/my-docker-app:latest
+      run: docker pull ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
 
     - name: Deploy Docker container
       run: |
         docker stop my-docker-app || true
         docker rm my-docker-app || true
-        docker run -d --name my-docker-app -p 4500:4500 pechijarevluka/my-docker-app:latest
+        docker run -d --name my-docker-app -p 4500:4500 ${{ secrets.DOCKER_USERNAME }}/my-docker-app:latest
+
+    - name: Wait for application to start
+      run: sleep 90  # Adjust sleep time if necessary
+
+    - name: Test application
+      run: curl -f http://localhost:4500 || exit 1
+
